frontends/default/stylesheets/stylesheet.css
/* ... */
.active-scaffold-header div.actions div.action_group {
display: inline;
float: right;
}

.active-scaffold-header div.actions div.action_group a,
.active-scaffold-header div.actions div.action_group span {
float: none;
margin: 0 2px;
padding: 2px;
}

.active-scaffold-header div.actions .action_group ul {
line-height: 130%;
top: 14px;
}

.view .active-scaffold-header div.actions a,
.view .active-scaffold-header div.actions div.action_group {
float: left;
}

.blue-theme .active-scaffold-header div.actions a {
color: #fff;
}

.active-scaffold-header div.actions a.disabled {
color: #666;
opacity: 0.5;
}

.blue-theme .active-scaffold-header div.actions a.disabled {
color: #fff;
opacity: 0.5;
}

.active-scaffold-header div.actions a.new,
.active-scaffold-header div.actions a.new_existing,
.active-scaffold-header div.actions a.show_search {
padding-left: 19px;
background-position: 1px 50%;
background-repeat: no-repeat;
}

.active-scaffold-header div.actions a.new,
.active-scaffold-header div.actions a.new_existing {
background-image: url(../../../images/active_scaffold/default/add.gif);
}

.active-scaffold-header div.actions a.show_search {
background-image: url(../../../images/active_scaffold/default/magnifier.png);
}

.blue-theme .active-scaffold-header div.actions a:hover {
background-color: #378CDF;
}

.active-scaffold-header div.actions a.disabled:hover {
background-color: transparent;
cursor: default;
}

.active-scaffold-header div.actions {
position: absolute;
right: 5px;
top: 5px;
text-align: right;
}

/* Table :: Column Headers
   ============================= */

.active-scaffold th {
background-color: #555;
text-align: left;
}

.active-scaffold th a,
.active-scaffold th p {
font: bold 11px arial, sans-serif;
display: block;
background-color: #555;
}

.active-scaffold th a, .active-scaffold th a:visited {
color: #fff;
padding: 2px 15px 2px 5px;
}

.active-scaffold th p {
color: #eee;
padding: 2px 5px;
}

.active-scaffold th a:hover {
background-color: #000;
color: #ff8;
}

.active-scaffold th.sorted {
background-color: #333;
}

.active-scaffold th.asc a,
.active-scaffold th.asc a:hover {
background: #333 url(../../../images/active_scaffold/default/arrow_up.gif) right 50% no-repeat;
}

.active-scaffold th.desc a,
.active-scaffold th.desc a:hover {
background: #333 url(../../../images/active_scaffold/default/arrow_down.gif) right 50% no-repeat;
}

.active-scaffold th.loading a,
.active-scaffold th.loading a:hover {
background: #333 url(../../../images/active_scaffold/default/indicator-small.gif) right 50% no-repeat;
}

/* Table :: Record Rows
   ============================= */

.active-scaffold tr.record {
  background-color: #E6F2FF;
}
.active-scaffold tr.record td {
padding: 5px 4px;
color: #333;
font-family: Verdana, sans-serif;
font-size: 11px;
border-bottom: solid 1px #C5DBF7;
border-left: solid 1px #C5DBF7;
}

.active-scaffold tr.record td.messages-container {
padding: 0px;
}

.active-scaffold tr.even-record {
background-color: #fff;
}
.active-scaffold tr.even-record td {
border-left-color: #ddd;
}

.active-scaffold tr.record td.sorted {
background-color: #B9DCFF;
border-bottom-color: #AFD0F5;
}

.active-scaffold tr.even-record td.sorted {
background-color: #E6F2FF;
border-bottom-color: #AFD0F5;
}

.active-scaffold tbody.records td.empty {
color: #999;
text-align: center;
}

.active-scaffold td.numeric,
.active-scaffold-calculations td {
text-align: right;
}

/* Table :: Actions (Edit, Delete)
   ============================= */
.active-scaffold tr.record td.actions {
border-right: solid 1px #ccc;
padding: 0;
min-width: 1%;
}

.active-scaffold tr.record td.actions table {
float: right;
width: auto;
margin-right: 5px;
}

.active-scaffold tr.record td.actions table td {
border: none;
text-align: right;
padding: 0 2px;
}

.active-scaffold tr.record td.actions a,
.active-scaffold tr.record td.actions span {
font: bold 11px verdana, sans-serif;
letter-spacing: -1px;
padding: 2px;
margin: 0 2px;
line-height: 16px;
white-space: nowrap;
}

.active-scaffold .actions .action_group span:hover {
background-color: #ff8;
}

.active-scaffold .actions .action_group {
position: relative;
text-align: right;
color: #0066CC;
}

.active-scaffold .actions .action_group ul {
border: medium none;
list-style-type: none;
margin: 0;
padding: 0;
position: absolute;
line-height: 200%;
display: none;
width: 100%;
left: -80px;
}

.active-scaffold .actions .action_group ul ul {
display: none;
position: absolute;
top: 0;
left: -120px;
}

.active-scaffold .actions .action_group ul li {
background: none repeat scroll 0 0 #FFF;
border-bottom: 2px solid #005CB8;
border-left: 2px solid #005CB8;
border-right: 2px solid #005CB8;
display: block;
padding-bottom: 5px;
position: relative;
width: 120px;
z-index: 2;
}

.active-scaffold .actions .action_group ul li.top {
border-top: 1px solid #005CB8;
}

.active-scaffold .actions .action_group:hover ul ul,
.active-scaffold .actions .action_group:hover ul ul ul {
display: none;
}

.active-scaffold .actions .action_group:hover ul,
.active-scaffold .actions .action_group ul li:hover ul {
display:block;
}




/* Table :: Inline Adapter
   ============================= */

.active-scaffold .view {
background-color: #DAFFCD;
padding: 4px;
border: solid 1px #7FcF00;
}

.active-scaffold tbody.records td.inline-adapter-cell .view {
border-top: none;
}

.active-scaffold .before-header td.inline-adapter-cell .view {
border-bottom: none;
}

.active-scaffold a.inline-adapter-close {
float: right;
text-indent: -4000px;
width: 16px;
height: 17px;
background: url(../../../images/active_scaffold/default/close.gif) 0 0 no-repeat;
}

/* Nested
   ======================== */

.blue-theme .active-scaffold .active-scaffold-header,
.blue-theme .active-scaffold .active-scaffold-footer {
background-color: #1F7F00;

background: transparent;
}

.active-scaffold .active-scaffold .active-scaffold-header {
margin-right: 15px;
}
/* ... */

